2008-12-01  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2008-12-01  Bastien Nocera  <hadess@hadess.net>

	* configure.ac: Update bluez requirements, we
	can't really require the 4.x API without the 4.x
	libraries...

2008-12-01  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonmount.c:
        * common/gmounttracker.[ch]:
        * daemon/gvfsbackend.[ch]:
	Make mounts/backends have a GIcon not a icon name
	
        * daemon/gvfsbackendsftp.c:
	Support /etc/favicon.png
	
        * daemon/gvfsbackendsmbbrowse.c:
	Simplify some code with the new GIcon support

	Patch from David Zeuthen (#557540)

2008-12-01  Alexander Larsson  <alexl@redhat.com>

        * common/Makefile.am:
        * common/gvfsdnssdresolver.c: Added.
        * common/gvfsdnssdresolver.h: Added.
        * common/gvfsdnssdutils.c: Added.
        * common/gvfsdnssdutils.h: Added.
        * daemon/Makefile.am:
        * daemon/dav+sd.mount.in: Added.
        * daemon/dav.mount.in:
        * daemon/gvfsbackenddav.c:
        * daemon/gvfsbackenddnssd.c:
        * daemon/gvfsbackendnetwork.c:
	For references to dns-sd dav services, use a
	dav+sd: uri, since this is stable over e.g.
	port changes and as such work better in e.g.
	bookmarks.
	
	Patch from David Zeuthen (#555436)

2008-11-18  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Better name for the has-username case.
	
2008-11-18  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	If user is specified, add to name too, so we get a unique fuse path

2008-11-17  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_parse_features):
	use g_ascii_is_space() (thanks Wouter)

2008-11-17  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c:
	document what the workarounds do

2008-11-17  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_prepare),
	(ftp_connection_use):