@@ -1,3 +1,8 @@
+2008-12-01  Alexander Larsson  <alexl@redhat.com>
+
+	* POTFILES.in:
+	Add missing files
+
 2008-11-28  Petr Kovar  <pknbe@volny.cz>
 
 	* cs.po: Updated Czech translation.
