@@ -1,5 +1,8 @@
 2008-12-01  Alexander Larsson  <alexl@redhat.com>
 
+	* daemon/Makefile.am (mount_in_files):
+	Dist dav+sd.mount
+
 	* NEWS:
 	Update for release
 
